add logo and modified header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <body>
     <section class="header">
             <nav>
-            <h1 id="logo">DANIEL RUTKOWSKI</h1>
+            <h1 id="logo">DANIEL RUTKOWSKI
+                <img src="./img/logo.png">
+            </h1>
                 <div class="nav_links" id="navLinks">
                     <i class="fas fa-times" onclick="hideMenu()"></i>
                     <ul>
@@ -39,7 +41,7 @@
 </div>
 
     </section>
-<!--  -->
+
     <section class="course" id="one">
         <h1>Dostępne kursy</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi iste maxime, repudiandae odio illo consequuntur ullam quae numquam, pariatur ipsam magnam at maiores inventore voluptas deleniti, unde commodi nam omnis!</p>
