--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="nav_links" id="navLinks">
                     <i class="fas fa-times" onclick="hideMenu()"></i>
                     <ul>
-                        <li><a href="#">O mnie</a></li>
+                        <li><a href="aboutMe.html">O mnie</a></li>
                         <li><a href="#">Aktualności</a></li>
                         <li><a href="#one">Nauka</a></li>
                         <li><a href="#two">Instrumenty</a></li>
