--- a/aboutMe.html
+++ b/aboutMe.html
@@ -13,10 +13,19 @@
     <title>Drum Teacher</title>
 </head>
 <body>
- <section class="header_about_me">
-     <a href="index.html" class="back_to">
-        <i class="fas fa-angle-left"></i>
-     </a>
- </section>
+
+    <section class="header_about_me">
+        <a href="index.html" class="back_to">
+            <i class="fas fa-angle-left"></i>
+        </a>
+        <img src="./img/logo.png">
+        <h1>O mnie</h1>
+        <div class="about">
+            <img src="./img/family.jpg">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi tempora sequi doloremque perspiciatis? Asperiores repellendus quo, illo alias voluptatibus pariatur delectus vel laborum corrupti nemo aut ullam nisi repudiandae porro?
+            Tempora expedita, ducimus omnis dolore vero voluptate exercitationem perferendis laborum aut porro? Praesentium quibusdam, odit cumque eligendi, consequatur veritatis molestias eveniet, dolor sunt tempora quidem reprehenderit itaque earum deserunt sed?
+            Rerum, nihil reiciendis autem totam alias commodi aperiam ab distinctio quos repellendus dolorum in voluptas non veritatis praesentium expedita mollitia explicabo harum voluptatibus eius? Tenetur sit nisi repellat consequatur dolore!</p>
+        </div>
+    </section>
 </body>
 </html>
