modified aboutMe.css and aboutMe.html

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/a6b012235e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="aboutMe.css">
 
-    <title>Drum Teacher</title>
+    <title>O Mnie </title>
 </head>
 <body>
 
@@ -21,7 +21,11 @@
         <img src="./img/logo.png">
         <h1>O mnie</h1>
         <div class="about">
-            <img src="./img/family.jpg">
+            <div class="img_about">
+                <img src="./img/g4.jpg"class="img">
+                <img src="./img/g6.jpg"class="img">
+                <img src="./img/g5.jpg"class="img">
+            </div>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi tempora sequi doloremque perspiciatis? Asperiores repellendus quo, illo alias voluptatibus pariatur delectus vel laborum corrupti nemo aut ullam nisi repudiandae porro?
             Tempora expedita, ducimus omnis dolore vero voluptate exercitationem perferendis laborum aut porro? Praesentium quibusdam, odit cumque eligendi, consequatur veritatis molestias eveniet, dolor sunt tempora quidem reprehenderit itaque earum deserunt sed?
             Rerum, nihil reiciendis autem totam alias commodi aperiam ab distinctio quos repellendus dolorum in voluptas non veritatis praesentium expedita mollitia explicabo harum voluptatibus eius? Tenetur sit nisi repellat consequatur dolore!</p>
