add section Galeria and Filmy. And modified index

--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
                 <div class="nav_links" id="navLinks">
                     <i class="fas fa-times" onclick="hideMenu()"></i>
                     <ul>
-                        <li><a href="aboutMe.html">O mnie</a></li>
-                        <li><a href="#">Aktualności</a></li>
-                        <li><a href="#one">Nauka</a></li>
+                        <li><a href="./aboutMe.html">O mnie</a></li>
+                        <!-- <li><a href="./News.html">Aktualności</a></li> -->
+                        <li><a href="#one">Kursy</a></li>
                         <li><a href="#two">Instrumenty</a></li>
                         <li><a href="#three">Galeria</a></li>
-                        <li><a href="#three">Filmy</a></li>
+                        <li><a href="./video.html">Filmy</a></li>
                         <li><a href="#four">Kontakt</a></li>
                     </ul>
                 </div>
                 <i class="fas fa-bars" onclick="showMenu()"></i>
             </nav>
-<div class="text_box">
-    <h1>„Bo w życiu najważniejsza jest pasja…”</h1>
-    <p>Perkusja jest Moją życiową pasją, którą dzięki długoletniemu doświadczeniu mogę dzielić się z innymi.<br> Nauczam i motywuję perkusistów bez względu na stopień zaawansowania.<br> Kładę nacisk na rozwój kreatywności, samodyscypliny, muzykalności i ekspresyjności.</p>
-    <a href="#" class="hero_btn">Przekonaj się sam</a>
-</div>
+    <div class="text_box">
+        <h1>„Bo w życiu najważniejsza jest pasja…”</h1>
+        <p>Perkusja jest Moją życiową pasją, którą dzięki długoletniemu doświadczeniu mogę dzielić się z innymi.<br> Nauczam i motywuję perkusistów bez względu na stopień zaawansowania.<br> Kładę nacisk na rozwój kreatywności, samodyscypliny, muzykalności i ekspresyjności.</p>
+        <a href="#" class="hero_btn">Przekonaj się sam</a>
+    </div>
 
     </section>
 
@@ -95,37 +95,18 @@
         </div>
     </section>
 
-    <section class="gallery" id="three">
-        <h1>Galeria</h1>
+    <section class="gallery-wrapper">
+        <h2 id="three">Galeria</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    <div class="gallery_row">
-
-        <div class="gallery_column">
-            <img src="img/g1.jpg">
+        <div class="img-area">
+            <div class="single-img"><img src="./img/g1.jpg"></div>
+            <div class="single-img"><img src="./img/g2.jpg"></div>
+            <div class="single-img"><img src="./img/g1.jpg"></div>
+            <div class="single-img"><img src="./img/g2.jpg"></div>
+            <div class="single-img"><img src="./img/g1.jpg"></div>
+            <div class="single-img"><img src="./img/g2.jpg"></div>
         </div>
-        <div class="gallery_column">
-            <img src="img/g2.jpg">
-        </div>
-    </div>
     </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
 <!---------- Enroll  ----------->
     <section class="Enroll">
       
