add section kontakt and modified index

--- a/index.html
+++ b/index.html
@@ -108,10 +108,55 @@
         </div>
     </section>
 <!---------- Enroll  ----------->
-    <section class="Enroll">
-      
-        <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h1>
-        <a href="#">Zapisz się</a>
+    <section class="contact" id="four">
+        <div class="content">
+            <h2>Napisz do Nas</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, vitae tempora animi aspernatur nihil veniam vel? Exercitationem maiores magni...</p>
+        <!-- <a href="#">Zapisz się</a> -->
+        </div>
+        <div class="container">
+            <div class="contact-info">
+                <div class="box">
+                    <div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+                    <div class="text">
+                        <h3>Adres</h3>
+                        <p>Drum Academy<br> ul. Lipowa 12<br>11-111 Lublin</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
+                    <div class="text">
+                        <h3>Telefon</h3>
+                        <p>666-666-666</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
+                    <div class="text">
+                        <h3>e-mail:</h3>
+                        <p>drumacademy@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+            <div class="contact-form">
+                <h2>Napisz do Nas...</h2>
+                <div class="inputBox">
+                    <input type="text"required="required">
+                    <span>Imie i Nazwisko</span>
+                </div>
+                <div class="inputBox">
+                    <input type="text"required="required">
+                    <span>Email</span>
+                </div>
+                <div class="inputBox">
+                    <textarea required="required"></textarea>
+                    <span>Treśc wiadomości:</span>
+                </div>
+                <div class="inputBox">
+                    <input type="submit" value="wyślij">
+                </div>
+            </div>
+        </div>
     </section>
 
     <a href="#" class="to_top">
