--- a/index.html
+++ b/index.html
@@ -37,33 +37,40 @@
     <div class="text_box">
         <h1>„Bo w życiu najważniejsza jest pasja…”</h1>
         <p>Perkusja jest Moją życiową pasją, którą dzięki długoletniemu doświadczeniu mogę dzielić się z innymi.<br> Nauczam i motywuję perkusistów bez względu na stopień zaawansowania.<br> Kładę nacisk na rozwój kreatywności, samodyscypliny, muzykalności i ekspresyjności.</p>
-        <a href="#" class="hero_btn">Przekonaj się sam</a>
+        <a href="#one" class="hero_btn">Przekonaj się sam</a>
     </div>
 
     </section>
 
     <section class="course" id="one">
-        <h1>Dostępne kursy</h1>
+        <h1>Dostępne lekcje</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi iste maxime, repudiandae odio illo consequuntur ullam quae numquam, pariatur ipsam magnam at maiores inventore voluptas deleniti, unde commodi nam omnis!</p>
 
         <div class="row">
             <div class="course_column">
-                <h3>Początkujący</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, vitae tempora animi aspernatur nihil veniam vel? Exercitationem maiores magni, similique rerum quo facilis nobis adipisci, cupiditate voluptas in quae quos?
-                Nam voluptas fuga alias quo odit aliquid libero nemo at quibusdam error sint earum corrupti ipsam cupiditate aspernatur, unde esse omnis aut! Optio, enim aliquid totam ipsa quia minima fugiat?</p>
-                    <button class="btn_course">zapisz się</button>
+                <h3>STACJONARNIE</h3>
+                <p>Zajęcia odbywają się na terenie szkoły. Koszt250zł<br/>4 lekcje w miesiącu. Czas trwania lekcji - 45 min.<br/>Pakiet &#43; materiały edukacyjne.<br/>Istnieje możliwość lekcji indywidualnych poza pakietami:</p>
+
+                <p>Stacjonarnie - 80zł - lekcja + materiały edukacyjne</p>
+                <p>Online – 80zł - lekcja + materiały edukacyjne</p>
+
+                <a href="#four"><button class="btn_course" id="stationary">zapisz się</button></a>
             </div>
             <div class="course_column">
-                <h3>Średnio zaawansowany</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, vitae tempora animi aspernatur nihil veniam vel? Exercitationem maiores magni, similique rerum quo facilis nobis adipisci, cupiditate voluptas in quae quos?
-                Nam voluptas fuga alias quo odit aliquid libero nemo at quibusdam error sint earum corrupti ipsam cupiditate aspernatur, unde esse omnis aut! Optio, enim aliquid totam ipsa quia minima fugiat?</p>
-                <button class="btn_course">zapisz się</button>
+                <h3>ONLINE</h3>
+                <p>Zajęcia odbywają się zdalnie - (online).</br>Koszt  250zł za 4   lekcje w miesiącu.</p>
+                <p>Czas trwania lekcji to 45 min.</p>
+                <p>(pakiet) + materiały edukacyjne</p>
+
+                <a href="#four"><button class="btn_course" id="online">zapisz się</button></a>
             </div>
             <div class="course_column">
-                <h3>Zaawansowany</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, vitae tempora animi aspernatur nihil veniam vel? Exercitationem maiores magni, similique rerum quo facilis nobis adipisci, cupiditate voluptas in quae quos?
-                Nam voluptas fuga alias quo odit aliquid libero nemo at quibusdam error sint earum corrupti ipsam cupiditate aspernatur, unde esse omnis aut! Optio, enim aliquid totam ipsa quia minima fugiat?</p>
-                <button class="btn_course">zapisz się</button>
+                <h3>Z DOJAZDEM</h3>
+                <p>Zajęcia odbywają się w domu ucznia</p> 
+                <p> Cena za lekcję wynosi 100zł za 45 min lekcji. Każdy przyjazd (Lublin i poza Lublinem do 10km)</p>
+                <strong>Ważne</strong>
+                <p>Gdy miejsce dojazdu jest dalej niż 10km poza Lublinem to cena jest ustalana indywidualnie.</p>
+                <a href="#four"><button class="btn_course" id="drive">zapisz się</button></a>
             </div>
         </div>
 
