add button back_to in video.html

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/a6b012235e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="aboutMe.css">
 
-    <title>O Mnie </title>
+    <title>O Nas</title>
 </head>
 <body>
 
