--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="nav_links" id="navLinks">
                     <i class="fas fa-times" onclick="hideMenu()"></i>
                     <ul>
-                        <li><a href="./aboutMe.html">O mnie</a></li>
+                        <li><a href="./aboutMe.html">O Nas</a></li>
                         <!-- <li><a href="./News.html">Aktualności</a></li> -->
                         <li><a href="#one">Kursy</a></li>
                         <li><a href="#two">Instrumenty</a></li>
