--- a/video.html
+++ b/video.html
@@ -16,6 +16,9 @@
     <title>Filmy</title>
 </head>
 <body>
+    <a href="index.html" class="back_to">
+        <i class="fas fa-angle-left"></i>
+    </a>
     <div class="container">
         <div class="header">
             <h1>Próbka moich wystąpień</h1>
