--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@
         <i class="fas fa-chevron-up"></i>
     </a>
 
-    <footer></footer>
+    <footer>
+        <p>Strona wykonana przez <a href="https://www.linkedin.com/in/%C5%82ukaszczuba/">Łukasz</a> Wszelkie prawa zastrzeżone &copy; 2020</p>
+    </footer>
     <script src="./scroll_btn.js"></script>
     <script src="./navLinks.js"></script>
     <!-- <script>
