add social links and modified logo

--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
 <body>
     <section class="header">
             <nav>
-            <h1 id="logo">DANIEL RUTKOWSKI
-                <img src="./img/logo.png">
+            <h1 id="logo">
+                <img src="./img/logo białe.png">
             </h1>
+            <!-- social buttons -->
+           
+            <!-- nav -->
                 <div class="nav_links" id="navLinks">
                     <i class="fas fa-times" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href="./aboutMe.html">O Nas</a></li>
                         <!-- <li><a href="./News.html">Aktualności</a></li> -->
-                        <li><a href="#one">Kursy</a></li>
+                        <li><a href="#one">Lekcje</a></li>
                         <li><a href="#two">Instrumenty</a></li>
                         <li><a href="#three">Galeria</a></li>
                         <li><a href="./video.html">Filmy</a></li>
@@ -36,7 +39,7 @@
             </nav>
     <div class="text_box">
         <h1>„Bo w życiu najważniejsza jest pasja…”</h1>
-        <p>Perkusja jest Moją życiową pasją, którą dzięki długoletniemu doświadczeniu mogę dzielić się z innymi.<br> Nauczam i motywuję perkusistów bez względu na stopień zaawansowania.<br> Kładę nacisk na rozwój kreatywności, samodyscypliny, muzykalności i ekspresyjności.</p>
+        <p>Gra na perkusji jest Moją życiową pasją, którą dzięki długoletniemu doświadczeniu mogę dzielić się z innymi.<br> Nauczam i motywuję perkusistów bez względu na stopień zaawansowania.<br> Kładę nacisk na rozwój kreatywności, samodyscypliny, muzykalności i ekspresyjności.</p>
         <a href="#one" class="hero_btn">Przekonaj się sam</a>
     </div>
 
@@ -144,7 +147,39 @@
                         <p>drumacademy@gmail.com</p>
                     </div>
                 </div>
+                <h4>Znajdziesz Nas również na:</h4>
+                <div class="social_wrapper">
+                    <div class="social_btw">
+                        <a href=""><i class="fab fa-facebook"></i></a>
+                    </div>
+
+                    <div class="social_btw">
+                        <a href="https://www.youtube.com/channel/UC42_9YnCwhf5_dgKKtzij1g"><i class="fab fa-youtube"></i></a>
+                    </div>
+    
+                    <div class="social_btw">
+                        <a href="https://www.instagram.com/drummeracademy/?fbclid=IwAR2CyhBN45ihROJDKH8XHFMKUhr8ZlDzY9VHS9XWbiVNbbFI_Vkq4X5VxtQ"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
             </div>
+
+            <!-- <div class="social_wrapper">
+                <div class="social_btw">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                </div>
+                <span>Facebook</span>
+
+                <div class="social_btw">
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+                <span>YouTube</span>
+
+                <div class="social_btw">
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+                <span>Instagram</span>
+            </div> -->
+
             <div class="contact-form">
                 <h2>Napisz do Nas...</h2>
                 <div class="inputBox">
@@ -171,7 +206,7 @@
     </a>
 
     <footer>
-        <p>Strona wykonana przez <a href="https://www.linkedin.com/in/%C5%82ukaszczuba/">Łukasz</a> Wszelkie prawa zastrzeżone &copy; 2020</p>
+        <p>Strona wykonana przez <a href="https://www.linkedin.com/in/%C5%82ukaszczuba/">Łukasz</a> Wszelkie prawa zastrzeżone &copy; 2021</p>
     </footer>
     <script src="./scroll_btn.js"></script>
     <script src="./navLinks.js"></script>
