add social links and modified logo

--- a/index.html
+++ b/index.html
@@ -149,17 +149,17 @@
                 </div>
                 <h4>Znajdziesz Nas również na:</h4>
                 <div class="social_wrapper">
-                    <div class="social_btw">
-                        <a href=""><i class="fab fa-facebook"></i></a>
-                    </div>
+                    <a href="https://www.youtube.com/channel/UC42_9YnCwhf5_dgKKtzij1g" class="social_btw" id="fb"><div>
+                        <i class="fab fa-facebook"></i>
+                    </div></a>
 
-                    <div class="social_btw">
-                        <a href="https://www.youtube.com/channel/UC42_9YnCwhf5_dgKKtzij1g"><i class="fab fa-youtube"></i></a>
-                    </div>
+                    <a href="https://www.youtube.com/channel/UC42_9YnCwhf5_dgKKtzij1g" class="social_btw" id="yt"><div>
+                        <i class="fab fa-youtube"></i>
+                    </div></a>
     
-                    <div class="social_btw">
-                        <a href="https://www.instagram.com/drummeracademy/?fbclid=IwAR2CyhBN45ihROJDKH8XHFMKUhr8ZlDzY9VHS9XWbiVNbbFI_Vkq4X5VxtQ"><i class="fab fa-instagram"></i></a>
-                    </div>
+                    <a href="https://www.instagram.com/drummeracademy/?fbclid=IwAR3gzhKQtGOdbSW8tq9N-yHNpOLNT_R0D8fj46364uqHwiAfySaTMDH3zAY" class="social_btw" id="inst"><div>
+                        <i class="fab fa-instagram"></i>
+                    </div></a>
                 </div>
             </div>
 
