add file gallery.html and modified index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <!-- <li><a href="./News.html">Aktualności</a></li> -->
                         <li><a href="#one">Lekcje</a></li>
                         <li><a href="#two">Instrumenty</a></li>
-                        <li><a href="#three">Galeria</a></li>
+                        <li><a href="./gallery.html">Galeria</a></li>
                         <li><a href="./video.html">Filmy</a></li>
                         <li><a href="#four">Kontakt</a></li>
                     </ul>
@@ -105,18 +105,6 @@
         </div>
     </section>
 
-    <section class="gallery-wrapper">
-        <h2 id="three">Galeria</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <div class="img-area">
-            <div class="single-img"><img src="./img/g1.jpg"></div>
-            <div class="single-img"><img src="./img/g2.jpg"></div>
-            <div class="single-img"><img src="./img/g1.jpg"></div>
-            <div class="single-img"><img src="./img/g2.jpg"></div>
-            <div class="single-img"><img src="./img/g1.jpg"></div>
-            <div class="single-img"><img src="./img/g2.jpg"></div>
-        </div>
-    </section>
 <!---------- Enroll  ----------->
     <section class="contact" id="four">
         <div class="content">
