--- a/aboutMe.html
+++ b/aboutMe.html
@@ -18,7 +18,7 @@
         <a href="index.html" class="back_to">
             <i class="fas fa-angle-left"></i>
         </a>
-        <img src="./img/logo.png" class="logo">
+        <img src="./img/logo białe.png" class="logo">
         <h1>O szkole słów kilka...</h1>
         <div class="about">
             <div class="img_about">
