--- a/gallery.html
+++ b/gallery.html
@@ -23,20 +23,19 @@
             <i class="fas fa-angle-left"></i>
         </a>
         <img src="./img/logo białe.png" class="logo">
-        <h2 id="three">Galeria</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <!-- <h2 id="three">Galeria</h2> -->
         <div class="img-area">
             <div class="single-img"><img src="./img/galeria/1.jpg"></div>
             <div class="single-img"><img src="./img/galeria/2.jpg"></div>
             <div class="single-img"><img src="./img/galeria/3.jpg"></div>
             <div class="single-img"><img src="./img/galeria/4.jpg"></div>
             <div class="single-img"><img src="./img/galeria/5.jpg"></div>
-            <div class="single-img"><img src="./img/galeria/6.jpg"></div>
-            <div class="single-img"><img src="./img/galeria/7.jpg"></div>
-            <div class="single-img"><img src="./img/galeria/8.jpg"></div>
-            <div class="single-img"><img src="./img/galeria/9.jpg"></div>
-            <div class="single-img"><img src="./img/galeria/10.jpg"></div>
-            <div class="single-img"><img src="./img/galeria/11.jpg"></div>
+            <!-- <div class="single-img"><img src="./img/galeria/6.jpg"></div> -->
+            <!-- <div class="single-img"><img src="./img/galeria/7.jpg"></div> -->
+            <!-- <div class="single-img"><img src="./img/galeria/8.jpg"></div> -->
+            <!-- <div class="single-img"><img src="./img/galeria/9.jpg"></div> -->
+            <!-- <div class="single-img"><img src="./img/galeria/10.jpg"></div>
+            <div class="single-img"><img src="./img/galeria/11.jpg"></div> -->
             <div class="single-img"><img src="./img/galeria/12.jpg"></div>
             <div class="single-img"><img src="./img/galeria/13.jpg"></div>
             <!-- <div class="single-img"><img src="./img/galeria/14.jpg"></div> -->
