add cennik.html and modified index.html

--- a/gallery.html
+++ b/gallery.html
@@ -30,17 +30,14 @@
             <div class="single-img"><img src="./img/galeria/3.jpg"></div>
             <div class="single-img"><img src="./img/galeria/4.jpg"></div>
             <div class="single-img"><img src="./img/galeria/5.jpg"></div>
-            <!-- <div class="single-img"><img src="./img/galeria/6.jpg"></div> -->
-            <!-- <div class="single-img"><img src="./img/galeria/7.jpg"></div> -->
-            <!-- <div class="single-img"><img src="./img/galeria/8.jpg"></div> -->
-            <!-- <div class="single-img"><img src="./img/galeria/9.jpg"></div> -->
-            <!-- <div class="single-img"><img src="./img/galeria/10.jpg"></div>
-            <div class="single-img"><img src="./img/galeria/11.jpg"></div> -->
             <div class="single-img"><img src="./img/galeria/12.jpg"></div>
             <div class="single-img"><img src="./img/galeria/13.jpg"></div>
-            <!-- <div class="single-img"><img src="./img/galeria/14.jpg"></div> -->
-            
         </div>
     </section>
+
+    <a href="#" class="to_top">
+        <i class="fas fa-chevron-up"></i>
+    </a>
 </body>
+<script src="./scroll_btn.js"></script>
 </html>
