--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                         <li><a href="./aboutMe.html">O Nas</a></li>
                         <!-- <li><a href="./News.html">Aktualności</a></li> -->
                         <li><a href="#one">Lekcje</a></li>
-                        <li><a href="#two">Instrumenty</a></li>
+                        <li><a href="./cennik.html">Cennik</a></li>
+                        <!-- <li><a href="#two">Instrumenty</a></li> -->
                         <li><a href="./gallery.html">Galeria</a></li>
                         <li><a href="./video.html">Filmy</a></li>
                         <li><a href="#four">Kontakt</a></li>
@@ -45,7 +46,7 @@
 
     </section>
 
-    <section class="course" id="one">
+    <!-- <section class="course" id="one">
         <h1>Dostępne lekcje</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi iste maxime, repudiandae odio illo consequuntur ullam quae numquam, pariatur ipsam magnam at maiores inventore voluptas deleniti, unde commodi nam omnis!</p>
 
@@ -77,29 +78,32 @@
             </div>
         </div>
 
-    </section>
+    </section> -->
 
-    <section class="instruments" id="two">
-        <h1>Instrumenty z których korzystam</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <section class="instruments" id="one">
+        <h1>Dostępne lekcje</h1>
+        <p>Z Nami dostosujesz formę i miejsce nauki</p>
 
         <div class="row">
             <div class="instruments_column">
                 <img src="img/drum_2.jpg">
                 <div class="layer">
-                    <h3>Perkusja</h3>
+                    <h3>Stacjonarne</h3>
+                    <a href="#four"><button class="btn_course" id="online">zapisz się</button></a>
                 </div>
             </div>
             <div class="instruments_column">
                 <img src="img/drum_2.jpg">
                 <div class="layer">
-                    <h3>Talerze</h3>
+                    <h3>Online</h3>
+                    <a href="#four"><button class="btn_course" id="online">zapisz się</button></a>
                 </div>
             </div>
             <div class="instruments_column">
                 <img src="img/drum_2.jpg">
                 <div class="layer">
-                    <h3>Bębny</h3>
+                    <h3>Z dojazdem</h3>
+                    <a href="#four"><button class="btn_course" id="online">zapisz się</button></a>
                 </div>
             </div>
         </div>
