--- a/video.html
+++ b/video.html
@@ -26,17 +26,17 @@
         <div class="video-container">
             <div class="video">
                 <iframe width="620" height="515"
-                    src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                    src="https://www.youtube.com/watch?v=X6h0_P3IALk">
                 </iframe>
             </div>
             <div class="video">
                 <iframe width="620" height="515"
-                    src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                    src="https://www.youtube.com/watch?v=UzrG-Dh3Sno">
                 </iframe>
             </div>
             <div class="video">
                 <iframe width="620" height="515"
-                    src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                    src="https://www.youtube.com/watch?v=gAlgHtZBR6g">
                 </iframe>
             </div>
             <div class="video">
