--- a/index.html
+++ b/index.html
@@ -86,21 +86,21 @@
 
         <div class="row">
             <div class="instruments_column">
-                <img src="img/drum_2.jpg">
+                <img src="img/stacjonarne1.jpg">
                 <div class="layer">
                     <h3>Stacjonarne</h3>
                     <a href="#four"><button class="btn_course" id="online">zapisz się</button></a>
                 </div>
             </div>
             <div class="instruments_column">
-                <img src="img/drum_2.jpg">
+                <img src="img/online1.jpg">
                 <div class="layer">
                     <h3>Online</h3>
                     <a href="#four"><button class="btn_course" id="online">zapisz się</button></a>
                 </div>
             </div>
             <div class="instruments_column">
-                <img src="img/drum_2.jpg">
+                <img src="img/dojazd1.jpg">
                 <div class="layer">
                     <h3>Z dojazdem</h3>
                     <a href="#four"><button class="btn_course" id="online">zapisz się</button></a>
