modified cennik and index

--- a/cennik.html
+++ b/cennik.html
@@ -35,7 +35,7 @@
                 <div class="online">
                     <p>Pakiet online</p>
                     <p>4 x 45min</p>
-                    <p>400zł</p>
+                    <p>250zł</p>
                 </div>
                 <div class="drive">
                     <p>Pakiet z dojazdem</p>
@@ -51,7 +51,7 @@
         </div>
         <div class="withoutPackage">
             <h2>Zajęcia jednorazowe poza pakietem</h2>
-            <p id="paragraph2">Zajęcia odbywające się rzadziej niż raz w tygodniu, traktowane są jako konsultacje.</p>
+            <p id="paragraph2">Zajęcia odbywające się poza pakietami i odbywające się rzadziej niż raz w tygodniu, traktowane są jako konsultacje.</p>
             
             <div class="wrapper1">
                 <div class="school">
@@ -73,6 +73,47 @@
                     <p>Grupowe</p>
                     <p>1 x 45min</p>
                     <p>45zł - os.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="dropdown">
+                <div class="dropdown_item" id="question1">
+                    <a href="#question1" class="dropdown_link">
+                        Co zawiera Pakiet Szkolny ?
+                        <i id="plus" class="fas fa-plus"></i>
+                        <i id="minus" class="fas fa-minus"></i>
+                    </a>
+                    <div class="dropdown_answer">
+                        <p>Indywidualne zajęcia z nauczycielem odbywające się na terenie szkoły Drummer Academy, w  stałym cyklu 4 zajęć w miesiącu. 
+                        To pakiet zapewniający efektywność i systematyczność w rozwijaniu i doskonaleniu umiejętności gry od  werbla, kończąc na zestawie perkusyjnym. To świetna  sposobność na rozwój techniki gry na perkusji, nauczenie się ulubionych piosenek, poznanie stylu znanych perkusistów. Dla początkujących, średniozaawansowanych oraz zaawansowanych. Dedykowany dla dzieci od 5 roku życia, młodzieży oraz dorosłych. Zapraszamy !!</p>
+                    </div>
+                </div>
+
+                <div class="dropdown_item" id="question2">
+                    <a href="#question2" class="dropdown_link">
+                        Co zawiera Pakiet Online ?
+                        <i id="plus" class="fas fa-plus"></i>
+                        <i id="minus" class="fas fa-minus"></i>
+                    </a>
+                    <div class="dropdown_answer">
+                        <p>Oferta dla tych, którzy posiadają perkusję/pad w domu, lecz nie mogą spotkać się na zajęciach twarzą w twarz. Dla nas to nie nowość! Przystosowaliśmy szkołę do prowadzenia zajęć w formie online. Te zajęcia zapewnią Tobie maksymalną frajdę i przyjemność z lekcji w domowych, bezpiecznych warunkach. Czego oczekujemy? Słuchawek, laptopa z kamerką oraz gotowości do działania!!
+                        </p>
+                    </div>
+                </div>
+
+                <div class="dropdown_item" id="question3">
+                    <a href="#question3" class="dropdown_link">
+                        Co zawiera Pakiet Z Dojazdem ?
+                        <i id="plus" class="fas fa-plus"></i>
+                        <i id="minus" class="fas fa-minus"></i>
+                    </a>
+                    <div class="dropdown_answer">
+                        <p>Posiadasz Swoją perkusję elektroniczną lub akustyczną w domu? Nie znosisz korków i lubisz wygodę ?
+                        Chcesz, aby zajęcia odbywały się u Ciebie twarzą w twarz? Ten pakiet jest z myślą o Tobie! Usługę świadczymy do około 15 km od Lublina. Oferta ma charakter limitowany. Ilość pakietów jest ograniczona!!!
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
