--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <i class="fas fa-bars" onclick="showMenu()"></i>
             </nav>
     <div class="text_box">
-        <h1>„Bo w życiu najważniejsza jest pasja…”</h1>
-        <p>Gra na perkusji jest Moją życiową pasją, którą dzięki długoletniemu doświadczeniu mogę dzielić się z innymi.<br> Nauczam i motywuję perkusistów bez względu na stopień zaawansowania.<br> Kładę nacisk na rozwój kreatywności, samodyscypliny, muzykalności i ekspresyjności.</p>
+        <h1>Znajdź w życiu swój własny rytm...</h1>
+        <p>Perkusja to wyjątkowy instrument, atrakcyjny i wciągający. Bijące serce każdego zespołu. To prestiż, pasja i zabawa. Zobaczysz, że raz spróbujesz i pokochasz...</p>
         <a href="#one" class="hero_btn">Przekonaj się sam</a>
     </div>
 
@@ -122,21 +122,22 @@
                     <div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
                     <div class="text">
                         <h3>Adres</h3>
-                        <p>Drum Academy<br> ul. Lipowa 12<br>11-111 Lublin</p>
+                        <p>Drummer Academy<br> ul.Bohaterów Monte Cassino 53<br>20-705 Lublin</p>
                     </div>
                 </div>
                 <div class="box">
                     <div class="icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
                     <div class="text">
                         <h3>Telefon</h3>
-                        <p>666-666-666</p>
+                        <p>730-568-384</p>
+                        <p>502-916-282</p>
                     </div>
                 </div>
                 <div class="box">
                     <div class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
                     <div class="text">
                         <h3>e-mail:</h3>
-                        <p>drumacademy@gmail.com</p>
+                        <p>kontakt@drummeracademy.pl</p>
                     </div>
                 </div>
                 <h4>Znajdziesz Nas również na:</h4>
