modified cennik and index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <ul>
                         <li><a href="./aboutMe.html">O Nas</a></li>
                         <!-- <li><a href="./News.html">Aktualności</a></li> -->
-                        <li><a href="#one">Lekcje</a></li>
+                        <li><a href="#one">Nauka</a></li>
                         <li><a href="./cennik.html">Cennik</a></li>
                         <!-- <li><a href="#two">Instrumenty</a></li> -->
                         <li><a href="./gallery.html">Galeria</a></li>
@@ -113,7 +113,7 @@
     <section class="contact" id="four">
         <div class="content">
             <h2>Napisz do Nas</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, vitae tempora animi aspernatur nihil veniam vel? Exercitationem maiores magni...</p>
+            <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, vitae tempora animi aspernatur nihil veniam vel? Exercitationem maiores magni...</p> -->
         <!-- <a href="#">Zapisz się</a> -->
         </div>
         <div class="container">
@@ -142,7 +142,7 @@
                 </div>
                 <h4>Znajdziesz Nas również na:</h4>
                 <div class="social_wrapper">
-                    <a href="https://www.youtube.com/channel/UC42_9YnCwhf5_dgKKtzij1g" class="social_btw" id="fb"><div>
+                    <a href="https://www.facebook.com/drummeracademylublin/" class="social_btw" id="fb"><div>
                         <i class="fab fa-facebook"></i>
                     </div></a>
 
