--- a/index.html
+++ b/index.html
@@ -46,43 +46,9 @@
 
     </section>
 
-    <!-- <section class="course" id="one">
-        <h1>Dostępne lekcje</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi iste maxime, repudiandae odio illo consequuntur ullam quae numquam, pariatur ipsam magnam at maiores inventore voluptas deleniti, unde commodi nam omnis!</p>
-
-        <div class="row">
-            <div class="course_column">
-                <h3>STACJONARNIE</h3>
-                <p>Zajęcia odbywają się na terenie szkoły. Koszt250zł<br/>4 lekcje w miesiącu. Czas trwania lekcji - 45 min.<br/>Pakiet &#43; materiały edukacyjne.<br/>Istnieje możliwość lekcji indywidualnych poza pakietami:</p>
-
-                <p>Stacjonarnie - 80zł - lekcja + materiały edukacyjne</p>
-                <p>Online – 80zł - lekcja + materiały edukacyjne</p>
-
-                <a href="#four"><button class="btn_course" id="stationary">zapisz się</button></a>
-            </div>
-            <div class="course_column">
-                <h3>ONLINE</h3>
-                <p>Zajęcia odbywają się zdalnie - (online).</br>Koszt  250zł za 4   lekcje w miesiącu.</p>
-                <p>Czas trwania lekcji to 45 min.</p>
-                <p>(pakiet) + materiały edukacyjne</p>
-
-                <a href="#four"><button class="btn_course" id="online">zapisz się</button></a>
-            </div>
-            <div class="course_column">
-                <h3>Z DOJAZDEM</h3>
-                <p>Zajęcia odbywają się w domu ucznia</p> 
-                <p> Cena za lekcję wynosi 100zł za 45 min lekcji. Każdy przyjazd (Lublin i poza Lublinem do 10km)</p>
-                <strong>Ważne</strong>
-                <p>Gdy miejsce dojazdu jest dalej niż 10km poza Lublinem to cena jest ustalana indywidualnie.</p>
-                <a href="#four"><button class="btn_course" id="drive">zapisz się</button></a>
-            </div>
-        </div>
-
-    </section> -->
-
     <section class="instruments" id="one">
         <h1>Dostępne lekcje</h1>
-        <p>Z Nami dostosujesz formę i miejsce nauki</p>
+        <p>Z Nami dostosujesz formę oraz miejsce nauki</p>
 
         <div class="row">
             <div class="instruments_column">
@@ -142,36 +108,19 @@
                 </div>
                 <h4>Znajdziesz Nas również na:</h4>
                 <div class="social_wrapper">
-                    <a href="https://www.facebook.com/drummeracademylublin/" class="social_btw" id="fb"><div>
+                    <a href="https://www.facebook.com/drummeracademylublin/" class="social_btw" id="fb" target="_blank"><div>
                         <i class="fab fa-facebook"></i>
                     </div></a>
 
-                    <a href="https://www.youtube.com/channel/UC42_9YnCwhf5_dgKKtzij1g" class="social_btw" id="yt"><div>
+                    <a href="https://www.youtube.com/channel/UC42_9YnCwhf5_dgKKtzij1g" class="social_btw" id="yt" target="_blank"><div>
                         <i class="fab fa-youtube"></i>
                     </div></a>
     
-                    <a href="https://www.instagram.com/drummeracademy/?fbclid=IwAR3gzhKQtGOdbSW8tq9N-yHNpOLNT_R0D8fj46364uqHwiAfySaTMDH3zAY" class="social_btw" id="inst"><div>
-                        <i class="fab fa-instagram"></i>
+                    <a href="https://www.instagram.com/drummeracademy/?fbclid=IwAR3gzhKQtGOdbSW8tq9N-yHNpOLNT_R0D8fj46364uqHwiAfySaTMDH3zAY" class="social_btw" id="inst" target="_blank"><div>
+                        <i class="fab fa-instagram" ></i>
                     </div></a>
                 </div>
             </div>
-
-            <!-- <div class="social_wrapper">
-                <div class="social_btw">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                </div>
-                <span>Facebook</span>
-
-                <div class="social_btw">
-                    <a href="#"><i class="fab fa-youtube"></i></a>
-                </div>
-                <span>YouTube</span>
-
-                <div class="social_btw">
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                </div>
-                <span>Instagram</span>
-            </div> -->
 
             <div class="contact-form">
                 <h2>Napisz do Nas...</h2>
@@ -203,18 +152,5 @@
     </footer>
     <script src="./scroll_btn.js"></script>
     <script src="./navLinks.js"></script>
-    <!-- <script>
-
-        const navLinks = document.getElementById("navLinks");
-
-        function showMenu(){
-            navLinks.style.right = "0";
-        }
-
-        function hideMenu(){
-            navLinks.style.right = "-200px";
-        }
-
-    </script> -->
 </body>
 </html> 
