--- a/aboutMe.html
+++ b/aboutMe.html
@@ -46,8 +46,27 @@
                     studio, znajdującego się na ulicy Monte Cassino 46 lub do biura szkoły na ulicy Bohaterów Monte
                     Cassino 53. Zapraszamy również do kontaktu telefonicznego 502-916-282 lub 730-568-384 oraz
                     mailowego kontakt@drummeracademy.pl</strong></p>
-                    <p><strong>Zapraszamy do kontaktu!!!</strong></p>
+                    <p><strong>Zapraszamy do kontaktu !!!</strong></p>
                 </p>
+
+                <h2>DANIEL RUTKOWSKI - ZAŁOŻYCIEL DRUMMER ACADEMY</h2>
+
+                <p>Jestem zawodowym nauczycielem gry na perkusji od ponad 12 lat i opracowałem
+                    autorski program kształcenia dostosowany do potrzeb każdego ucznia. Staram się przekazywać wiedzę
+                    najlepiej jak potrafię, aby była ona przystępna, interesująca a zajęcia efektywne i ciekawe. Uczyłem m.in.
+                    w szkołach muzycznych, domach kultury, ogniskach muzycznych. Przygotowałem z powodzeniem
+                    niejednego ucznia do egzaminów wstępnych szkół muzycznych: klasycznych i jazzowych. Podchodzę do
+                    każdego ucznia indywidualnie, dostosowując program nauczania do konkretnych potrzeb, gdyż są one
+                    różne w zależności od wieku ucznia oraz poziomu zaawansowania.</p>
+
+                <p>Jestem także czynnym muzykiem z wieloletnim doświadczeniem scenicznym i studyjnym i staram
+                    się uwrażliwiać swoich uczniów na muzykę, kreatywność oraz twórczość. Udzielam się w wielu
+                    projektach muzycznych i nagraniach oraz współpracowałem z wieloma artystami, m.in.:<strong>Moow mi Janek
+                    (MAM TALENT) , Monika Kowalczyk , Katarzyna Góras (MUST BE THE MUSIC/THE VOICE OF
+                    POLAND) , Bartek Kawałek (THE VOICE OF POLAND) , Tetris, Flemings, Dali-Dyla, Królewska
+                    Orkiestra Symfoniczna , Aneta Dąbska, Sylwia Piotrowska, Couleur Cafe, ChDK Big Band, Helicopters
+                    Brass Band, Grzegorz Kloc i wielu innych.</strong> Ciągle doskonalę swój warsztat oraz współpracując z innymi
+                    muzykami i perkusistami staram się, aby szkoła oferowała edukację perkusyjną na najwyższym poziomie.</p>
             </div>
         </div>
     </section>
