modified gallery. Add new image and favicon

--- a/video.html
+++ b/video.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.css">
 
     <script src="https://kit.fontawesome.com/a6b012235e.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/png" href="./img/favicon.png"/>
+    <link rel="shortcut icon" href="./img/favicon.png">
 
     <title>Filmy</title>
 </head>
