--- a/aboutMe.html
+++ b/aboutMe.html
@@ -10,6 +10,9 @@
     <script src="https://kit.fontawesome.com/a6b012235e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="aboutMe.css">
 
+    <link rel="icon" type="image/png" href="./img/favicon.png"/>
+    <link rel="shortcut icon" href="./img/favicon.png">
+
     <title>O Nas</title>
 </head>
 <body>
