--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,9 @@
 
     <script src="https://kit.fontawesome.com/a6b012235e.js" crossorigin="anonymous"></script>
 
+    <link rel="icon" type="image/png" href="./img/favicon.png"/>
+    <link rel="shortcut icon" href="./img/favicon.png">
+
 
 
     <title>Galeria</title>
@@ -25,12 +28,12 @@
         <img src="./img/logo białe.png" class="logo">
         <!-- <h2 id="three">Galeria</h2> -->
         <div class="img-area">
-            <div class="single-img"><img src="./img/galeria/1.jpg"></div>
-            <div class="single-img"><img src="./img/galeria/2.jpg"></div>
-            <div class="single-img"><img src="./img/galeria/3.jpg"></div>
-            <div class="single-img"><img src="./img/galeria/4.jpg"></div>
             <div class="single-img"><img src="./img/galeria/5.jpg"></div>
-            <div class="single-img"><img src="./img/galeria/12.jpg"></div>
+            <div class="single-img"><img src="./img/galeria/d2.jpg"></div>
+            <div class="single-img"><img src="./img/galeria/10.jpg"></div>
+            <div class="single-img"><img src="./img/galeria/11.jpg"></div>
+            <div class="single-img"><img src="./img/galeria/4.jpg"></div>
+            <div class="single-img"><img src="./img/galeria/15.jpg"></div>
             <div class="single-img"><img src="./img/galeria/13.jpg"></div>
         </div>
     </section>
