--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
     <script src="https://kit.fontawesome.com/a6b012235e.js" crossorigin="anonymous"></script>
 
+    <link rel="icon" type="image/png" href="./img/favicon.png"/>
+    <link rel="shortcut icon" href="./img/favicon.png">
+
     <title>Drum Teacher</title>
 </head>
 <body>
