remove video section

--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
                     <i class="fas fa-times" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href="./aboutMe.html">O Nas</a></li>
-                        <!-- <li><a href="./News.html">Aktualności</a></li> -->
+                       
                         <li><a href="#one">Nauka</a></li>
                         <li><a href="./cennik.html">Cennik</a></li>
-                        <!-- <li><a href="#two">Instrumenty</a></li> -->
                         <li><a href="./gallery.html">Galeria</a></li>
-                        <li><a href="./video.html">Filmy</a></li>
+                        <!-- <li><a href="./video.html">Filmy</a></li> -->
                         <li><a href="#four">Kontakt</a></li>
                     </ul>
                 </div>
