--- a/video.html
+++ b/video.html
@@ -28,7 +28,7 @@
         <div class="video-container">
             <div class="video">
                 <iframe width="620" height="515"
-                    src="https://www.youtube.com/watch?v=X6h0_P3IALk">
+                    src="https://www.youtube.com/watch?v=gAlgHtZBR6g">
                 </iframe>
             </div>
             <div class="video">
