deletet few photo and modified cennik

--- a/cennik.html
+++ b/cennik.html
@@ -23,8 +23,8 @@
             <i class="fas fa-angle-left"></i>
         </a>
         <h1>Cennik</h1>
-        <p>Dane do przelewu</p>
-        <p>Nr konta:</p>
+        <!-- <p>Dane do przelewu</p>
+        <p>Nr konta:</p> -->
         <div class="monthPackage">
             <h2>Pakiety miesięczne</h2>
             <p id="paragraph">Ceny obowiązują przy zakupie czterech zajęć w miesiącu</p>
