--- a/index.html
+++ b/index.html
@@ -77,8 +77,6 @@
     <section class="contact" id="four">
         <div class="content">
             <h2>Napisz do Nas</h2>
-            <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, vitae tempora animi aspernatur nihil veniam vel? Exercitationem maiores magni...</p> -->
-        <!-- <a href="#">Zapisz się</a> -->
         </div>
         <div class="container">
             <div class="contact-info">
@@ -120,7 +118,7 @@
                 </div>
             </div>
 
-            <div class="contact-form">
+            <form class="contact-form" method="POST">
                 <h2>Napisz do Nas...</h2>
                 <div class="inputBox">
                     <input type="text"required="required">
@@ -137,7 +135,7 @@
                 <div class="inputBox">
                     <input type="submit" value="wyślij">
                 </div>
-            </div>
+            </form>
         </div>
     </section>
 
